fix: 添加模式、预览、还原、移除等处理的语言支持

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
                 <!-- 模式切换器 -->
                 <div class="mode-switcher">
-                    <button id="single-mode-btn" class="mode-btn active">单张模式</button>
-                    <button id="batch-mode-btn" class="mode-btn">批量模式</button>
+                    <button id="single-mode-btn" class="mode-btn active" data-i18n="singleMode">单张模式</button>
+                    <button id="batch-mode-btn" class="mode-btn" data-i18n="batchMode">批量模式</button>
                 </div>
 
                 <div class="language-switcher">
