feat: 更新字体选择支持多种中文字体

--- a/index.html
+++ b/index.html
@@ -253,10 +253,14 @@
                                 字体
                             </label>
                             <select id="font-family" aria-label="Font family">
-                                <option value="Arial">Arial</option>
-                                <option value="Helvetica">Helvetica</option>
-                                <option value="Times New Roman">Times New Roman</option>
-                                <option value="Courier New">Courier New</option>
+                                <option value="Arial, 'Microsoft YaHei', 微软雅黑, sans-serif">Arial / 微软雅黑</option>
+                                <option value="Helvetica, 'PingFang SC', 苹方, sans-serif">Helvetica / 苹方</option>
+                                <option value="'Times New Roman', 'SimSun', 宋体, serif">Times New Roman / 宋体</option>
+                                <option value="'Courier New', 'SimHei', 黑体, monospace">Courier New / 黑体</option>
+                                <option value="'Segoe UI', 'Noto Sans SC', 'Source Han Sans SC', sans-serif">Segoe UI / 思源黑体</option>
+                                <option value="Georgia, 'KaiTi', 楷体, serif">Georgia / 楷体</option>
+                                <option value="Verdana, 'Microsoft YaHei UI', sans-serif">Verdana / 微软雅黑 UI</option>
+                                <option value="Tahoma, 'Noto Sans CJK SC', sans-serif">Tahoma / Noto Sans CJK</option>
                             </select>
                         </div>
                         
