feat:高级文字编辑;图片信息面板样式调整

--- a/index.html
+++ b/index.html
@@ -317,6 +317,125 @@
                             </select>
                         </div>
                     </div>
+
+                    <!-- 高级文字样式 -->
+                    <div class="control-row">
+                        <div class="control-group">
+                            <label for="font-color">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.31 0z"/>
+                                </svg>
+                                <span data-i18n="fontColor">文字颜色</span>
+                            </label>
+                            <input type="color" id="font-color" value="#FFFFFF" aria-label="Font color">
+                        </div>
+
+                        <div class="control-group">
+                            <label for="font-opacity">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="10"/>
+                                    <path d="M12 6v6l4 2"/>
+                                </svg>
+                                <span data-i18n="fontOpacity">文字透明度</span>: <span id="font-opacity-value">100</span>%
+                            </label>
+                            <input type="range" id="font-opacity" min="0" max="100" value="100" step="5" aria-label="Font opacity">
+                        </div>
+                    </div>
+
+                    <div class="control-row">
+                        <div class="control-group">
+                            <label for="stroke-color">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="10"/>
+                                </svg>
+                                <span data-i18n="strokeColor">描边颜色</span>
+                            </label>
+                            <input type="color" id="stroke-color" value="#000000" aria-label="Stroke color">
+                        </div>
+
+                        <div class="control-group">
+                            <label for="stroke-width">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <line x1="4" y1="21" x2="4" y2="14"/>
+                                    <line x1="4" y1="10" x2="4" y2="3"/>
+                                    <line x1="12" y1="21" x2="12" y2="12"/>
+                                    <line x1="12" y1="8" x2="12" y2="3"/>
+                                    <line x1="20" y1="21" x2="20" y2="16"/>
+                                    <line x1="20" y1="12" x2="20" y2="3"/>
+                                </svg>
+                                <span data-i18n="strokeWidth">描边粗细</span>: <span id="stroke-width-value">0</span>px
+                            </label>
+                            <input type="range" id="stroke-width" min="0" max="10" value="0" step="0.5" aria-label="Stroke width">
+                        </div>
+                    </div>
+
+                    <div class="control-row">
+                        <div class="control-group">
+                            <label class="checkbox-label">
+                                <input type="checkbox" id="text-shadow" checked aria-label="Text shadow">
+                                <span data-i18n="textShadow">文字阴影</span>
+                            </label>
+                        </div>
+
+                        <div class="control-group">
+                            <label class="checkbox-label">
+                                <input type="checkbox" id="bg-mask" aria-label="Background mask">
+                                <span data-i18n="bgMask">背景遮罩</span>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="control-row">
+                        <div class="control-group">
+                            <label for="bg-mask-opacity">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                                </svg>
+                                <span data-i18n="bgMaskOpacity">遮罩透明度</span>: <span id="bg-mask-opacity-value">50</span>%
+                            </label>
+                            <input type="range" id="bg-mask-opacity" min="0" max="100" value="50" step="5" aria-label="Background mask opacity">
+                        </div>
+                    </div>
+
+                    <!-- Phase 2: 进阶功能 -->
+                    <div class="control-row">
+                        <div class="control-group">
+                            <label for="text-rotation">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <polyline points="23 4 23 10 17 10"/>
+                                    <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"/>
+                                </svg>
+                                <span data-i18n="textRotation">文字旋转</span>: <span id="text-rotation-value">0</span>°
+                            </label>
+                            <input type="range" id="text-rotation" min="-180" max="180" value="0" step="5" aria-label="Text rotation">
+                        </div>
+                    </div>
+
+                    <div class="control-row">
+                        <div class="control-group">
+                            <label for="line-height">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <line x1="3" y1="6" x2="21" y2="6"/>
+                                    <line x1="3" y1="12" x2="21" y2="12"/>
+                                    <line x1="3" y1="18" x2="21" y2="18"/>
+                                </svg>
+                                <span data-i18n="lineHeight">行间距</span>: <span id="line-height-value">1.8</span>
+                            </label>
+                            <input type="range" id="line-height" min="1.0" max="3.0" value="1.8" step="0.1" aria-label="Line height">
+                        </div>
+
+                        <div class="control-group">
+                            <label for="letter-spacing">
+                                <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <polyline points="4 7 4 4 20 4 20 7"/>
+                                    <line x1="9" y1="20" x2="15" y2="20"/>
+                                    <line x1="12" y1="4" x2="12" y2="20"/>
+                                </svg>
+                                <span data-i18n="letterSpacing">字间距</span>: <span id="letter-spacing-value">0</span>px
+                            </label>
+                            <input type="range" id="letter-spacing" min="0" max="20" value="0" step="1" aria-label="Letter spacing">
+                        </div>
+                    </div>
                 </section>
 
                 <section class="info-section">
@@ -402,19 +521,10 @@
 
                     <!-- 模板操作 -->
                     <div class="template-actions">
-                        <button id="save-template-btn" class="btn btn-primary" data-i18n="saveAsTemplate">
-                            <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/>
-                                <polyline points="17,21 17,13 7,13 7,21"/>
-                                <polyline points="7,3 7,8 15,8"/>
-                            </svg>
-                            保存为模板
+                        <button id="save-template-btn" class="btn btn-primary" style="min-width: 100px;" data-i18n="saveAsTemplate">
+                            保存模板
                         </button>
-                        <button id="manage-templates-btn" class="btn btn-secondary" data-i18n="manageTemplates">
-                            <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <circle cx="12" cy="12" r="3"/>
-                                <path d="M12 1v6m0 6v6M5.64 5.64l4.24 4.24m6.36 0l4.24-4.24m0 12.72l-4.24-4.24m-6.36 0l-4.24 4.24"/>
-                            </svg>
+                        <button id="manage-templates-btn" class="btn btn-secondary" style="min-width: 100px;" data-i18n="manageTemplates">
                             管理模板
                         </button>
                     </div>
